# vine-denoising-copula

./: .gitignore  ADVANCED_SUMMARY.md  ADVANCED_TRAINING.md  CHEATSHEET.py  CITATION.cff  CLEANUP_SUMMARY.txt  CODEBASE_STRUCTURE_ANALYSIS.txt  FINAL_CLEANUP_COMPLETE.txt  FINAL_STATE.txt  GIT_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  LICENSE  QUICK_SUMMARY.txt  README.md  REFACTORING_SUMMARY.txt  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SCRIPTS_ANALYSIS.txt  TRAINING_GUIDE.md  TRAINING_QUICKREF.py  TRAINING_README.md  TRAINING_SUMMARY.md  VINE_IMPLEMENTATION_SUMMARY.md  VINE_TYPES.md  environment.yml  install.sh  plot_loss_curves.sh  pyproject.toml  requirements.txt  run_validation.sh  run_validation_diffusion.sh  run_visualize_cnn.sh  run_visualize_diffusion.sh  setup_env.sh  slurm-45753496.out  test_stability_fixes.py  verify_refactoring.sh
analysis/: PAPER_BEST_MODEL.json  PAPER_CHECKPOINT.txt  audit_paper_assets.py  e15_e16_experiment_report_20260331.md  paper_asset_audit_latest.json  paper_results_status_20260208.md  paper_sweep_jobs_20260211.json  paper_sweep_results_latest.json  paper_sweep_results_latest.md  summarize_paper_sweeps.py  tc_decomposition_review_20260213.md  tc_story_figure_provenance_20260213.md  vine_copula_correctness_audit_20260211.md  vine_type_matrix_status_20260211.md  vine_type_matrix_submissions_20260211_021525.txt
configs/: default.yaml  train_1gpu_test.yaml  train_4gpus.yaml  train_8gpu_light.yaml  train_advanced.yaml  train_comprehensive.yaml  train_conditional_diffusion.yaml  train_conditional_diffusion_hybrid.yaml  train_conditional_diffusion_long.yaml  train_conditional_diffusion_smooth.yaml  train_conditional_diffusion_v2.yaml  train_conditional_diffusion_v3.yaml  train_diffusion_boundary_m128.yaml  train_diffusion_probit_m128.yaml  train_diffusion_uniform_m128.yaml  train_direct_hist2density.yaml  train_large.yaml  train_quick.yaml  train_sinkhorn_cnn.yaml  validate_no_probit_diffusion_m128.yaml
data/: .gitkeep
docs/: API.md  COMPUTATIONAL_COMPLEXITY.md  CONFIGURATION.md  GETTING_STARTED.md  MODEL_RELEASES.md  PAPER_REPRODUCIBILITY.md  TECHNICAL_DETAILS.md  USER_GUIDE.md  WHY_DIFFUSION.md  diffusion_copula_analysis.tex  index.html
examples/: compare_vines.py  end_to_end.py  estimate_mutual_information.py  fit_vine_copula.py  train_custom_copula.py  train_denoiser_corrected.py  use_pretrained_model.py  visualization_examples.py  visualize_copulas.py
scripts/: benchmark_density_estimation.py  build_docs_site.py  compare_methods.py  demo_vine_copula.py  download_pretrained.py  download_uci_datasets.py  e14_mnist_latent_benchmark.py  evaluate.py  evaluate_model.py  generate_comprehensive_data.py  generate_publication_figures.py  generate_real_figures.py  hyperparameter_sweep.py  infer.py  mi_estimation.py  mi_self_consistency_tests.py  mi_self_consistency_tests_v2.py  model_selection.py  package_pretrained_model.py  quick_train.py  run_evaluation.py  run_scaling_with_accuracy.py  show_paper_checkpoint.py  sweep_e1_diffusion_inference.py  tc_benchmark.py  test_diffusion_copula_bivariate.py  test_high_dimensional.py  test_high_dimensional_extended.py  test_on_known_copulas.py  train.py  train_conditional_diffusion.py  train_conditional_diffusion_hybrid.py  train_conditional_diffusion_v2.py  train_direct_hist2density.py  train_grid_ddp.sh  train_large_scale.py  train_local.sh  train_local_multi_gpu.sh  train_unified.py  upload_pretrained_to_hf.py  (+6 more)
slurm/: PAPER_JOBS.md  evaluate.sh  paper_e10_uci_flow.sh  paper_e12_block_mi.sh  paper_e13_ablation_depth.sh  paper_e13_ablation_depth_dense.sh  paper_e13_depth_stability.sh  paper_e14_mnist_latent.sh  paper_e15_structure_search.sh  paper_e16_rolling_dependence.sh  paper_e17_tree_knockout_tc.sh  paper_e18_nonsimplified_stress.sh  paper_e19_flow_sensitivity.sh  paper_e2_uci.sh  paper_e3_var.sh  paper_e4_imputation.sh  paper_e5_anomaly.sh  paper_e6_theory.sh  paper_e7_biomed.sh  paper_e8_neural_copula.sh  paper_e9_real_edge_scaling.sh  paper_generate_artifacts.sh  paper_ipfp_iter_ablation.sh  paper_mi_benchmark.sh  paper_mi_consistency.sh  paper_rerun_model_selection.sh  paper_rerun_model_selection_complex.sh  paper_seed_variance_array.sh  paper_tc_benchmark.sh  paper_train_enhanced.sh  paper_vdc_denoiser_cond.sh  paper_vdc_diffusion_cond.sh  paper_vdc_e1_baseline.sh  paper_vdc_enhanced_cnn_cond.sh  paper_vdc_mi_estimation.sh  paper_vdc_model_selection.sh  paper_vdc_scaling.sh  submit_all_paper_experiments.sh  submit_all_paper_jobs.sh  (+21 more)
(+118 files in other folders)
