[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vine-diffusion-copula"
version = "0.1.0"
description = "Vine Denoising Copula for high-dimensional vine-copula modeling and information estimation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Houman Safaai", email = "hsafaai@fas.harvard.edu"}
]
keywords = ["copulas", "vine copulas", "density estimation", "mutual information", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "hydra-core>=1.3.0",
    "tqdm>=4.65.0",
    "h5py>=3.8.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.2.0",
    "pyvinecopulib>=0.7.5",
]

[project.urls]
Homepage = "https://github.com/KempnerInstitute/vine-diffusion-copula"
Repository = "https://github.com/KempnerInstitute/vine-diffusion-copula"
Issues = "https://github.com/KempnerInstitute/vine-diffusion-copula/issues"
Documentation = "https://github.com/KempnerInstitute/vine-diffusion-copula/tree/main/docs"

[project.optional-dependencies]
dev = [
    "ruff>=0.0.270",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest>=7.3.0",
    "hypothesis>=6.75.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]
test = [
    "pytest>=7.3.0",
    "hypothesis>=6.75.0",
]
viz = [
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
]

r-baselines = [
    "rpy2>=3.5.0",
]

paper-baselines = [
    "copulas>=0.13.0",
    "ennemi>=1.4.0",
    "pytorch-lightning>=2.1.0",
]

[project.scripts]
vdc = "vdc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vdc*"]

[tool.setuptools.package-data]
vdc = ["resources/pretrained/*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "baseline: marks tests that require R/external tools",
]
